--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "inquirer": "^8.2.4",
+    "mysql2": "^3.3.3",
     "nodemon": "^2.0.22"
   }
 }
